---------------

4.2.4 ():
	Fix bugs reported by Justin Crawford:
	- fix XM note and envelope retrig on delay effect
	- fix XM keyoff reset on new note event
	- fix retrig effect frame counter
	- fix envelope update after manually set point
	Other changes:
	- fix Chiptracker pattern decoding (reported by Andreas Argirakis)
	- fix AMF sample loop end
	- refactor S3M arpeggio effect memory
	- address clang-analyzer warnings

4.2.3 (20140118):
	- remove limit of samples in RTM loader
	- fix S3M length bug introduced in 4.2.1 (reported by Misty De Meo)
	- fix MDL effect decoding
	- fix MDL envelope decoding
	- fix MDL fadeout setting when envelopes are disabled
	- fix MDL instrument vibrato depth
	- fix MDL sample loop size
	- fix MDL fine volume slide effect
	- fix MacOS X dylib versioning

4.2.2 (20140111):
	- re-enable Falcon MegaTracker loader
	- fix DIGI Booster finetune (reported by Andreas Argirakis)
	- fix tempo in BPM mode MMD modules (reported by Andreas Argirakis)
	- fix crash in zip depacker
	- fix MED4 large (>64KB) sample loading
	- fix MED4 sample loop flag setting
	- fix MMD Protracker-compatible volume slide effect
	- fix number of channels in GDM loader
	- fix number of channels in MED4 loader
	- fix instrument name setting in MDL loader
	- replace LZX decompressor code with LGPL version from XAD

4.2.1 (20131229):
	Many fixes by Vitamin/CAIG:
	- fixes in memory I/O layer
	- improve loading of many module formats including XM and S3M
	- fix resource leak in case of invalid module structure
	- portability fixes
	Other changes:
	- disable YM2149 emulator
	- disable poorly implemented and rarely used module formats
	- fix mod loop setting in very small loops (reported by Misty De Meo)
	- fix linear period mode vibrato handling
	- refactor vibrato effect processing
	- code cleanup

4.2.0 (20131109):
	- ignore invalid Noisetracker effects
	- add API call to load a module from a buffer in memory